Fix variables and scrollbars

--- a/Transparent Theme.theme.css
+++ b/Transparent Theme.theme.css
@@ -16,11 +16,7 @@
 
     --colour3: white;
 
-    --transparency-1: linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)); /*TRANSPARENCY OF THE BACKGROUND. IF YOU WANT TO MAKE IT MORE TRANSPARENT CHANGE THE LAST VALUE TO BE CLOSER TO 0. IF LESS TRANSPARENT CHANGE TO BE CLOSER TO 1.*/
-    --transparency-2: linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70));
-    --transparency-3: linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70));
-    --transparency-4: linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70));
-    --transparency-5: linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70));
+    --transparency: linear-gradient(to right, rgba(0,0,0,0.70), rgba(0,0,0,0.70)); /*TRANSPARENCY OF THE BACKGROUND. IF YOU WANT TO MAKE IT MORE TRANSPARENT CHANGE THE LAST VALUE TO BE CLOSER TO 0. IF LESS TRANSPARENT CHANGE TO BE CLOSER TO 1.*/
 
     --avatar-roundness: 10%; /*FOR CIRCLE CHANGE TO 50%, FOR SQUARE CHANGE TO 0%*/
     --icon-roundness: 10%; /*FOR CIRCLE CHANGE TO 50%, FOR SQUARE CHANGE TO 0%*/
